2000-08-01  DJ Delorie  <dj@redhat.com>

	* libc/include/sys/config.h: define __IMPORT appropriately
	* libc/include/ctype.h (_ctype_): use __IMPORT
	* libc/include/math.h (__infinity, signam, _LIB_VERSION): ditto
	* libc/include/math.h (__mb_cur_max): ditto
	* libc/include/time.h (_timezone, _daylight, _tzname): ditto
	* libc/include/unctrl.h (__unctrl, __unctrllen): ditto
	* libc/include/errno.h (_sys_errlist, _sys_nerr): ditto
	* libc/include/unistd.h (environ): ditto

2000-07-28  Michael Meissner  <meissner@redhat.com>

	* libc/include/math.h (__infinity): Declare as an array without
	bounds to get around small data support.  Rewrite Cygwin support
	to be more general.
	* libm/math/s_infconst.c (__infinity): Ditto.
	* libm/mathfp/s_infconst.c (__infinity): Ditto.

Thu Jul 27 10:46:01 2000  Christopher Faylor <cgf@cygnus.com>

	* libc/include/math.h: Use appropriate dll import linkage for
	__infinity under Cygwin.

2000-07-13  DJ Delorie  <dj@cygnus.com>

	* libc/stdio/vfprintf.c: pad 0.0 correctly with %e

Wed Jun 28 14:08:00 2000  Keith Walker  <keith.walker@arm.com>

	* libc/sys/arm/crt0.S (.LC30): Added missing length parameter
	to argument list for AngelSWI_Reason_GetCmdLine.

Tue Jun 27 15:49:00 2000  Marek Michalkiewicz  <marekm@linux.org.pl>

	* configure.host: Add support for AVR target.
	* libc/include/machine/ieeefp.h: Likewise.
	* libc/include/sys/config.h: Likewise.

Thu Jun 22 18:35:00 2000  Ranjith Kumaran  <ranjith@cygnus.com>

	* README: Newlib 1.8.2 must be built in a separate directory
	than the sources.

Tue Jun 20 14:30:00 2000  Jeff Johnston  <jjohnstn@cygnus.com>

        * libc/include/sys/reent.h (_rand_next): Added __extension__
        qualifier as long long type is not strict ANSI.
        * libc/stdlib/rand.c (rand): Added __extension__ qualifier
        to long long constant.

Fri Jun 16 23:02:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * libc/include/sys/unistd.h: Add prototypes for `seteuid' and